# ant-wars-webassembly

./: .gitignore  Cargo.toml  README.md  justfile
js/: .gitignore  index.ts  package.json  tsconfig.json  webpack.config.js
js/src/: index.html
src/: ant.rs  anthill.rs  draw.rs  lib.rs  map.rs
